# drf-course

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.main.txt  requirements.psycopg2.txt  requirements.txt  ruff.toml
.github/workflows/: checks.yml
app/: ruff.toml
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
