[tool.poetry]
name = "drf-course"
version = "0.1.0"
description = "Django REST Framework Course"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "~3.2.4"
djangorestframework = "~3.12.4"

[tool.poetry.group.psycopg2.dependencies]
psycopg2 = "^2.8.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.9"
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
